log/shell_script_26_10_2022_06-19-06.log
Start to run Python Script
  File "./run.py", line 103
    company_country ={"country":comp_location_country} hh # creating a dictionary for combining dataframe later
                                                       ^
SyntaxError: invalid syntax
Script Failure
